--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           <rect width="100%" height="100%" fill="#868e96"></rect>
         </svg>
         <div class="card-body bg-black">
-          <h5 class="card-title text-center text-white">Card title</h5>
+          <h5 class="card-title text-center text-white">Camisetas</h5>
         </div>
       </div>
     </div>
